--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
             <p>
                 We opened our doors 15 years ago and have enjoyed being a part of our vibrant community in Philadelphia. From the morning coffee before work to the late-night study sesh, we've got the perfect brew for you. Sit and enjoy the warm atmosphere full of music and comfy couches. Or, grab your latte to go along with some of our freshly baked pasteries and decadent desserts. 
             </p>
-            <button>
-                See our full menu
-            </button>
+            <div class="button">
+                <button type="button">
+                    See our full menu
+                </button>
+            </div>
         </div>
     </section>
 
@@ -54,9 +56,11 @@
             <p>
                 Brew the coffee you love in the comfort of your own home with one of our three tiered subscriptions. 
             </p>
-            <button>
-                Start Brewing
-            </button>
+            <div class="button">
+                <button type="button">
+                    Start Brewing
+                </button>
+            </div>
 
             <h2>Gift Cards</h2>
             <p>
