Updated subscription and contest sections

--- a/index.html
+++ b/index.html
@@ -52,20 +52,37 @@
 
     <section class="subscription">
         <div class="container">
-            <h2>Great Coffee Delivered to Your Door</h2>
+            <div class="copy">
+                <h2>Great Coffee Delivered to Your Door</h2>
+                <p>
+                    Brew the coffee you love in the comfort of your own home with one of our three tiered subscriptions. 
+                </p>
+                <div class="button">
+                    <button type="button">
+                        Start Brewing
+                    </button>
+                </div>
+            </div>
+            <img class="contest" src="images/coffee.jpg" alt="">
+        </div>
+    </section>
+
+    <section class="gift-cards">
+        <div class="container">
+            <h2>Win A Year Of FREE Coffee!</h2>
             <p>
-                Brew the coffee you love in the comfort of your own home with one of our three tiered subscriptions. 
+                It's no secret that we LOVE coffee. Now, we want to share that love with you! From now until October 31, we're giving our customers a chance to create a custom design that will go on our new line of coffee "Brotherly Love" in honor of our favorite city. <br>
+                <br>
+                All designs must be in by Ocotber 25, 2023. On October 31, we'll choose one winner who will receive one year of FREE coffee through our subscription. Plus, the winning design will be front and center on our shelves as the artwork for our new coffee line. 
             </p>
             <div class="button">
                 <button type="button">
-                    Start Brewing
+                    Submit Your Design!
                 </button>
             </div>
-
-            <h2>Gift Cards</h2>
-            <p>
-                Looking to give the perfect gift? We got you covered! Gift cards are now available at each location. 
-            </p>
+            <div class="contest-image">
+                <img src="images/coffee_competition.jpg" alt="">
+            </div>
         </div>
     </section>
 
