js carousel complete

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/style.css">
     <title>Drip & Sip Coffee Shop</title>
-    <script src="nav.js" defer></script>
+    <script src="js/nav.js" defer></script>
 </head>
 <body>
     <!-- HEADER AND HERO -->
@@ -86,15 +86,40 @@
         </div>
     </section>
 
-    <section class="quotes">
-        <div class="container">
-            Quotes Go HERE!!!
+    <section class="carousel">
+        <div class="carousel-container">
+            <img src="images/quote 1.png" id="quote-img" alt="">
         </div>
     </section>
 
+    <script src="js/review.js"></script>
+    
     <footer>
         
     </footer>
 
 </body>
 </html>
+
+
+
+<!-- <script src="review.js"></script>
+<div class="quotes">
+    <div class="quote-container">
+        <div class="review">
+            <img name="review" src="images/quote 1.png" alt="">
+        </div>
+        <div class="review">
+            <img src="images/quote 2.png" alt="">
+        </div>
+        <div class="review">
+            <img src="images/quote 3.png" alt="">
+        </div>
+        <div class="review">
+            <img src="images/quote 4.png" alt="">
+        </div>
+        <div class="review">
+            <img src="images/quote 5.png" alt="">
+        </div>
+    </div>
+</div> -->
