completed newsletter section

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </section>
 
     <section class="carousel">
-        <div class="carousel-container">
+        <div class="carousel-container fade">
             <img src="images/quote 1.png" id="quote-img" alt="">
         </div>
     </section>
@@ -95,31 +95,21 @@
     <script src="js/review.js"></script>
     
     <footer>
-        
+        <div class="newsletter">
+            <div class="container">
+                <h3>Join Our Mailing List</h3>
+                <p>
+                    Get the latest coffee news and exclusive discounts every Sunday. Plus, sign up today and receive 15% off your next purchase!
+                </p>
+                <form id="nlform_submission" action="#">
+                    <div class="email">
+                        <input type="email" name="email" placeholder="Your Email Address">
+                    </div>
+                    <button class="newsletter-button">Subscribe</button>
+                </form>
+            </div>
+        </div>
     </footer>
 
 </body>
 </html>
-
-
-
-<!-- <script src="review.js"></script>
-<div class="quotes">
-    <div class="quote-container">
-        <div class="review">
-            <img name="review" src="images/quote 1.png" alt="">
-        </div>
-        <div class="review">
-            <img src="images/quote 2.png" alt="">
-        </div>
-        <div class="review">
-            <img src="images/quote 3.png" alt="">
-        </div>
-        <div class="review">
-            <img src="images/quote 4.png" alt="">
-        </div>
-        <div class="review">
-            <img src="images/quote 5.png" alt="">
-        </div>
-    </div>
-</div> -->
