--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="hero active">
         <header>
             <div class="logo">
-                LOGO
+                DRIP & SIP
             </div>
             <!-- <div class="toggle active">
                
@@ -110,6 +110,18 @@
             </div>
         </div>
     </footer>
+    <hr class="hr-line">
+    <div class="social-copyright">
+        <div class="container">
+            <a href=""><img src="images/f_logo_RGB-Black_1024.png" alt=""></a>
+            <a href=""><img src="images/instagram_icon.png" alt=""></a>
+            <a href=""><img src="images/linkedin.png" alt=""></a>
+            <a href=""><img src="images/youtube.png" alt=""></a>
+            <p>
+                &copy; 2023, Drip and Sip Coffee House. All rights reserved.
+            </p>
+        </div>
+    </div>
 
 </body>
 </html>
